--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,10 @@ server:
   servlet:
     context-path:
 
- #缓存
 spring:
+#缓存
   thymeleaf:
     cache: false
+#配置 资源国际化
+  messages:
+    basename: i18n/messages
